[package]
name = "day06"
version = "0.1.0"
authors = ["CYBAI <cyb.ai.815@gmail.com>"]
edition = "2018"

[[bin]]
name = "part1"
path = "src/part1/main.rs"

[[bin]]
name = "part2"
path = "src/part2/main.rs"

[lib]
name = "day06"
path = "src/lib.rs"

[dependencies]
regex = "1.1.0"
lazy_static = "1.2.0"
aoc_utils = { path = "../aoc_utils" }
itertools = "0.7.11"
